--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
+    "d3-array": "^1.2.1",
+    "d3-axis": "^1.0.8",
+    "d3-scale": "^1.0.7",
+    "d3-selection": "^1.2.0",
+    "d3-shape": "^1.2.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-measure": "^2.0.2",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "react-table": "^6.7.6",
