--- a/package.json
+++ b/package.json
@@ -3,20 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.1.1",
     "axios": "^0.17.1",
     "d3-array": "^1.2.1",
     "d3-axis": "^1.0.8",
+    "d3-random": "^1.1.0",
     "d3-scale": "^1.0.7",
     "d3-selection": "^1.2.0",
     "d3-shape": "^1.2.0",
+    "lodash": "^4.17.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-measure": "^2.0.2",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "react-sparklines": "^1.7.0",
     "react-table": "^6.7.6",
     "semantic-ui-css": "^2.2.12",
-    "semantic-ui-react": "^0.77.1"
+    "semantic-ui-react": "^0.77.1",
+    "victory": "^0.24.5"
   },
   "scripts": {
     "start": "react-scripts start",
