--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-measure": "^2.0.2",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "react-select": "^1.2.1",
     "react-sparklines": "^1.7.0",
     "react-table": "^6.7.6",
     "semantic-ui-css": "^2.2.12",
