--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.2.0",
     "react-measure": "^2.0.2",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "1.0.17",
     "react-select": "^1.2.1",
     "react-sparklines": "^1.7.0",
