Add several redux packages

--- a/package.json
+++ b/package.json
@@ -15,12 +15,18 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-measure": "^2.0.2",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
     "react-scripts": "1.0.17",
     "react-select": "^1.2.1",
     "react-sparklines": "^1.7.0",
     "react-table": "^6.7.6",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^0.16.0",
+    "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.77.1",
     "victory": "^0.24.5"
