--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "d3-selection": "^1.2.0",
     "d3-shape": "^1.2.0",
     "lodash": "^4.17.4",
+    "query-string": "^5.0.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-measure": "^2.0.2",
