--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "d3-scale": "^1.0.7",
     "d3-selection": "^1.2.0",
     "d3-shape": "^1.2.0",
+    "history": "^4.7.2",
     "lodash": "^4.17.4",
     "query-string": "^5.0.1",
     "react": "^16.2.0",
@@ -18,7 +19,7 @@
     "react-measure": "^2.0.2",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
-    "react-router-redux": "^4.0.8",
+    "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "1.0.17",
     "react-select": "^1.2.1",
     "react-sparklines": "^1.7.0",
